--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,20 @@
 
 buildscript {
     repositories {
-        jcenter()
-    }
+        maven { url 'http://localhost:8081/repository/jcenter/' }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-
+        classpath 'com.android.tools.build:gradle:3.1.2'
+    }
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        maven { url 'http://localhost:8081/repository/google/'}
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        maven { url 'http://localhost:8081/repository/jcenter/' }
+        maven { url 'http://localhost:8081/repository/google/'}
     }
 }
 
