--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@
 
 buildscript {
     repositories {
+        // Gradle 4.1 and higher include support for Google's Maven repo using
+        // the google() method. And you need to include this repo to download
+        // Android Gradle plugin 3.0.0 or higher.
         maven { url 'http://localhost:8081/repository/jcenter/' }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-    }
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
         maven { url 'http://localhost:8081/repository/google/'}
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
     }
 }
 
